--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GEMINI_API_KEY=AIzaSyA-pqkwOGnfdcaxJuwtt6nZ5KpJF2_M9M8
-GMAIL_EMAIL=ahsanijazadm@gmail.com
-GMAIL_APP_PASSWORD =jlxb dklc gepf qsxi
+GEMINI_API_KEY=####
+GMAIL_EMAIL=#####
+GMAIL_APP_PASSWORD =####
            
